# tea-model

./: Cargo.toml
src/: core_trait.rs  enums.rs  lib.rs  series_ext.rs
src/models/: average.rs  lgbm.rs  linear.rs  mod.rs
