[package]
name = "tea-model"
version = "0.1.0"
edition = "2021"

[features]
default = []

blas = ["linfa/intel-mkl-static"]
# linear model
linear = ["linfa", "linfa-linear"]
linear-blas = ["blas", "linear", "linfa-linear/blas"]

# lightgbm
lgbm = ["dep:lgbm"]


[dependencies]
polars = { version = ">=0.41, <0.43" }
ndarray = { version = ">=0.15, <0.17" }
tea-time = { version = ">=0.3, <0.5" }
anyhow = "1.0"
chrono = "0.4"
linfa = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
lgbm = { version = "0.0", optional = true }
